// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "./submit";
option java_multiple_files = true;
option java_package = "io.grpc.examples.submit";
option java_outer_classname = "submitProto";

package submit;

// The Op service definition.
service Submit {
    rpc Submit_transaction (stream StreamRequest) returns (stream StreamResponse) {}
}


message StreamRequest {
    string channelID=1;
    bytes payload = 2;
}

message StreamResponse {
    bool answer = 1;
}
